crates/arrow-quiver/tests/compile_fail/punted_type.rs
//! Difficult and exotic datatypes are explicitly unsupported.

use arrow_quiver::arrow::array::MapArray;

#[derive(arrow_quiver::Quiver)]
struct Thing {
    map: MapArray,
}

fn main() {}
