crates/arrow-quiver/tests/compile_fail/punted_type.stderr
error: `MapArray` is explicitly not supported (yet)
 --> tests/compile_fail/punted_type.rs:7:10
  |
7 |     map: MapArray,
  |          ^^^^^^^^
